# 2_homework271123_requests

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
