[tool.poetry]
name = "2-homework271123-requests"
version = "0.1.0"
description = ""
authors = ["ggjiuw <herezoom1231@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
